Fixing the layout issues

--- a/src/web/public/stylesheets/style.css
+++ b/src/web/public/stylesheets/style.css
@@ -225,7 +225,79 @@ section:after {
   clear: both;
 }
 
+/*******************************************************************************************
+       RIGHT SIDE
+*******************************************************************************************/
 
+.grandParentContaniner {
+  display: table;
+  height: 100%;
+  width: 45%;
+  margin: 0 auto;
+}
+
+.parentContainer {
+  display: table-cell;
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+}
+
+form {
+  border: 3px solid #f1f1f1;
+}
+
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 50%;
+}
+
+.buttons {
+  text-align: center;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  background-color: #f44336;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 50%;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 25%;
+  border-radius: 70%;
+}
+
+.container {
+  padding: 16px;
+}
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
